--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,56 @@
-// TODO
+.container {
+  margin: 5rem auto 0;
+}
+
+.posts {
+  margin: 4rem auto 0;
+
+  a {
+    display: block;
+
+    & + a {
+      padding-top: 3.125rem;
+    }
+
+    strong {
+      font-size: 1.75rem;
+      font-weight: 700;
+      line-height: 3rem;
+    }
+
+    p {
+      color: var(--body);
+      font-size: 1.125rem;
+      line-height: 1.6rem;
+    }
+
+    div {
+      margin-top: 1.5rem;
+      display: flex;
+      align-items: center;
+      flex-direction: row;
+
+      time,
+      span {
+        font-size: 0.875rem;
+        color: var(--info);
+        display: flex;
+        align-items: center;
+        margin-right: 1.5rem;
+
+        svg {
+          margin-right: 0.5rem;
+        }
+      }
+    }
+  }
+}
+.btnReadMore {
+  background-color: transparent;
+  border: 0;
+  margin-top: 4.125rem;
+
+  color: var(--highlight);
+  font-size: 1.125rem;
+  font-weight: 600;
+}
